--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     
     </section>
     <footer class="contiainer-fluid">
-        <div class="row">
+        <div id="footer-details"  class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
