--- a/index.html
+++ b/index.html
@@ -194,4 +194,7 @@
     </footer>
 </body>
 
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8O_KyYHIGtcOvWftqb_noP0Vymp0gsM0&callback=initMap"></script>
+
 </html>
