--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rosie</title>
+      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+        <script type="text/javascript">
+        (function() {
+        emailjs.init("user_3AIzcN0JnaeF9zYXwTqKA");
+        emailjs.send("service_dutv3rx","template_14d9thl");
+        })();
+</script>
 </head>
 <body>
     <header>
