--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,6 @@
         <script type="text/javascript">
         (function() {
         emailjs.init("user_3AIzcN0JnaeF9zYXwTqKA");
-        emailjs.send("service_dutv3rx","template_14d9thl");
         })();
 </script>
 </head>
@@ -62,9 +61,9 @@
                 <h5 class="uppercase text-center">Let's work together!</h5>
 
                 <div class="center-form">
-                    <form>
+                    <form onsubmit="return sendMail(this);" method="POST">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+                        <input type="email" name="emailaddress" id="emailaddress" class="form-control" placeholder="Email" required />
                         <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
@@ -139,5 +138,6 @@
             </div>
         </div>
     </footer>
+    <script src="assets/js/sendEmail.js"></script>
 </body>
 </html>
